# onagre

./: .gitignore  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  Cargo.toml  Cross.toml  README.md  cog.toml  config-example.toml  config.example-ugly.scss  config.example.scss  gallery.html  get-started.html  index.html  test.scss  theming-reference.html
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CD.yml  CI.yml  Release.yaml
assets/: 404.html-D5dAAwdL.js  404.html-DwKWQDUn.js  app-BBKei0bT.js  app-Dj7meDOY.js  gallery.html-BE2ecBC0.js  gallery.html-rzCBbZSZ.js  get-started.html-BWAOVQLk.js  get-started.html-CPNUl4na.js  index.html-Bgy1uvSv.js  index.html-BouSVD9i.js  not-adwaita-D2Y_w_wh.js  style-DzzantHI.css  theming-reference.html-Vi7_Vr51.js  theming-reference.html-t8aygS2d.js
benches/: database.rs  icon.rs
ci/: action.sh
config_example/: config.toml  theme.toml
docs/: config.example-ugly.scss
docs/theme_examples/: murz-theme.toml  nord-rounded.scss  nord-rounded.toml  simple-theme.toml  theme-nord.toml
docs/website/: .gitignore  package.json  pnpm-lock.yaml
docs/website/src/: README.md  gallery.md  get-started.md  theming-reference.md
docs/website/src/.vuepress/: config.js
docs/website/src/.vuepress/hljs/: bash_with_onagre.js  highlightjsPlugin.js  ron.js
docs/website/src/.vuepress/public/theme_examples/: simmple.scss  solarized.scss
src/: config.rs  desktop.rs  dir_walk.rs  entries.rs  fs_search.rs  lib.rs  main.rs  onagre.rs  style.rs
src/app/: active_mode.rs  cache.rs  mod.rs  mode.rs  plugin_matchers.rs  state.rs
src/app/entries/: db_entry.rs  entry2.rs  mod.rs  pop_entry.rs
src/app/style/: app.rs  mod.rs
src/app/style/rows/: button.rs  generic.rs  icon.rs  mod.rs
src/app/style/scrollable/: mod.rs  scroller.rs
src/app/style/search/: input.rs  mod.rs
src/app/subscriptions/: plugin_configs.rs  pop_launcher.rs
src/app/widgets/: mod.rs
src/app/widgets/entries/: mod.rs  theme.rs
src/app/widgets/icon/: handle.rs  mod.rs  named.rs  theme.rs
src/app/widgets/row/: mod.rs  theme.rs
src/app/widgets/search/: mod.rs
src/backend/: launcher.rs  mod.rs
src/config/: color.rs  error.rs  grammar.pest  helpers.rs  inheritance.rs  mod.rs  padding.rs  theme_settings.rs
src/db/: desktop_entry.rs  entity.rs  mod.rs  plugin.rs  run.rs  web.rs
src/entries/: cache.rs  db_entry.rs  desktop.rs  external_entry.rs  generic.rs  mod.rs  pop_entry.rs
src/font/: mod.rs
src/freedesktop/: desktop.rs  icons.rs  mod.rs
src/icons/: mod.rs
src/style/: color.rs  color_de.rs  font.rs  layout.rs  mod.rs  rows.rs  scrollable.rs  search.rs  serde.rs  text_input.rs  theme.rs  theme_settings.rs
src/subscriptions/: custom.rs  desktop_entries.rs  external.rs  home_entries.rs  mod.rs  pop_launcher.rs
src/ui/: app.rs  mod.rs  mode.rs  plugin_matchers.rs  state.rs  subscription.rs
src/ui/style/: app.rs  color.rs  layout.rs  mod.rs  rows.rs  scrollable.rs  search.rs  theme.rs
src/ui/style/rows/: generic.rs  icon.rs  mod.rs
src/ui/style/scrollable/: mod.rs  scroller.rs
src/ui/style/search/: input.rs  mod.rs
src/ui/subscriptions/: mod.rs  plugin_configs.rs  pop_launcher.rs
tests/: theme.scss
theme_examples/: murz.scss
