[package]
name = "onagre"
version = "1.0.0-alpha.0"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
edition = "2018"
resolver = "2"
readme = "README.md"
license = "MIT"
repository = "https://github.com/oknozor/onagre"
categories = ["gui", "development-tools"]
keywords = ["launcher", "app-launcher", "pop-launcher", "onagre"]
description = """
A general purpose application launcher for X and wayland  inspired by rofi/wofi and alfred, build with iced
and pop-launcher.
"""

[profile.release]
codegen-units = 1
lto = true

[features]
default = ["iced/wgpu", "iced/palette"]
debug = ["iced/debug"]

[dependencies]
iced = { version = "0.10.0", features = ["wgpu", "palette", "svg", "image", "tokio"] }
iced_core = "0.10.0"
iced_runtime = "0.1.1"
iced_style = "0.9.0"
tokio = { version = "1.29.1", features = ["process", "macros", "io-util"] }
sled = "0.34.7"

onagre-launcher-toolkit = { git = "https://github.com/onagre-launcher/launcher" }
clap = { version = "^4", features = ["derive"] }
freedesktop-icons = "0.2.5"

log = { version = "^0.4" }
systemd-journal-logger = "2.1.1"

once_cell = "^1"
anyhow = "^1"
dirs = "^5"
thiserror = "^1"

serde = { version = "^1", features = ["derive"] }
serde_ini = "0.2.0"
serde_json = "1.0.99"
pest = "2.7.0"
pest_derive = "2.7.0"
ico = "0.3.0"
regex = "1.8.4"
shell-words = "^1"

[dev-dependencies]
speculoos = "0.11.0"
pretty_assertions = "1.2.1"
