[package]
name = "onagre"
version = "1.1.1"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
edition = "2018"
resolver = "2"
readme = "README.md"
license = "MIT"
repository = "https://github.com/oknozor/onagre"
categories = ["gui", "development-tools"]
keywords = ["launcher", "app-launcher", "pop-launcher", "onagre"]
description = """
A general purpose application launcher for X and wayland  inspired by rofi/wofi and alfred, build with iced
and pop-launcher.
"""

[profile.release]
panic = "abort"
opt-level = "s"
codegen-units = 1
lto = true

[features]
default = ["iced/wgpu"]
debug = ["iced/debug"]

[dependencies]
iced = { version = "0.13.1", default-features = false, features = [
    "svg",
    "image",
    "tokio",
    "advanced",
] }

tokio = { version = "1.29.1", features = ["process", "macros", "io-util"] }
redb = "1.5.0"

onagre-launcher-toolkit = "0.1.2"
clap = { version = "^4", features = ["derive"] }
freedesktop-icons = "0.4.0"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

once_cell = "^1"
anyhow = "^1"
dirs = "^5"
thiserror = "^1"

serde = { version = "^1", features = ["derive"] }
serde_ini = "0.2.0"
serde_json = "1.0.99"
pest = "2.7.0"
pest_derive = "2.7.0"
regex = "1.8.4"
shell-words = "^1"
derive_setters = "0.1.6"

[dev-dependencies]
speculoos = "0.11.0"
pretty_assertions = "1.2.1"
